<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.18">
  <DUT Name="E_AlarmID" Id="{76d14cad-78e1-4b38-b853-4ad9476aba63}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE E_AlarmID :
(

	DrawerExtendError 			:=31,	//31
	DrawerRetractError,					//32
	DrawerUpError,						//33
	DrawerDownError,					//34	
	TBotEAPNotSafeToMoveError,			//35
	TBotEAPAntiCollisionTriggered,		//36
	BothTIUExternRetractSignalDetected,	//37
	BothTIUUpDownSignalDetected,		//38
	APIsNotInUPPosition,				//39
	DoorCloseSignalNotDetected,			//40
	TBotSideDoorCloseSignalNotDetected	//41

);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>