<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.18">
  <DUT Name="E_TIIAlarm" Id="{afcb9789-7584-47eb-9807-8782e7fa62a5}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE E_TIIAlarm :
(
	ipAPPresentSensor		    		:= 1,
	ipAPPowerOn	 		    			,		//:=2
	ipAPReady				    		,		//:=3 
	ipAPDeactuatedPLC		    		,		//:=4
	ipAPDeactuatedHwr		    		,		//:=5
	ipCellFluidLeakage1		    		,		//:=6
	ipCellFluidLeakage2		  			,		//:=7
	ipCellGroundFault 		    		,		//:=8
	ipTesterPresent			    		,		//:=9
	ipTesterPowerOn			    		,		//:=10
	ipTesterReady			    		,		//:=11
	ipTCCellDoorClosed		    		,		//:=12
	ipTesterLatchesClosed	    		,		//:=13
	TBOT_TC_ACPower_Signal      		,		//:=14
	DS_Facility_EAP_ACPower_Signal		,		//:=15
	FrontDoorLockSignalNotDetected		,		//:=16
	ipTCDrawerExtendSignal				,		//:=17
	ipTCDrawerRetractSignal				,		//:=18
	ipTCDrawerUpSignal					,		//:=19
	ipTCDrawerDownSignal						//:=20
);
END_TYPE


]]></Declaration>
  </DUT>
</TcPlcObject>